Added candied apples
Added mushroom ketchup/juice
Added VanVar compatibility for more mixing bowl variants
Added gummy candy (spiles on cherry, peach, plum, or apricot tree to get gum; harden into gum or mixed with syrup or honey for candy; make candy molds)
Added bamboo steamer
Added aspic
Added dehydrated yeast?
Added pigs in a blanket (dough + sausage)
Added flatbread
Cut pasta can be combined with chopped food to make pasta dumplings; pasta dumplings can be used in place of pasta OR dumplings
Standardized smashed meat variants?
Healing over time added 
Olives integrated
Added industrial mixing bowl (works much faster, higher storage capacity)
Added 'tenderized' attribute to meat
Fruit leather added?
Cauldrons have different sealed perish rates & cook times
Cooked meat can be glazed with honey/syrup
Gelatin-making process more complicated
RenderIngredients now uses selectiveElements to cut down on files
Soulstorm brew integrated with Alchemy
Instead of simply 'cooking' certain liquids (such as sap > syrup or water > salt) , they are now actual simmer recipes 
Soy milk can be used to make tofu
Soy milk can be used to make cheese1
Cheese bread added (cheese is part of dough-making process)
Pemmican can be added to soup/stew?
Butchering compatibility added
In Dappled Groves compatibility added (just bark bread)


Patreon suggestions:
- Shaved Ice (glacier ice, syrup (fruit, maple, honey, etc.)
- Ice cream (glacier ice, salt, milk/soy milk, honey (optional), syrup (fruit, maple, etc.)(Optional) (Could be mixed in the mixing bowl into a cooking pot?)
- Fruit Leather (fruit mash and fruit syrup mixed into a paste then baked in oven)
- Flower Bread (like fruit bread, but with flowers. Mainly aesthetic, but maybe different flowers can add buffs? I.E. catmint = temporary health regen, woad = temporary improved movement speed, etc.)