@@ -59,7 +59,7 @@
       		"expandedfoods:wildfruitsyrupportion-seamango" : { saturation: 12, "health": -4, foodcategory: "Fruit" },
       		"expandedfoods:wildfruitsyrupportion-crowseye" : { saturation: 12, "health": -5, foodcategory: "Fruit" },
       		"expandedfoods:wildfruitsyrupportion-*" : { saturation: 12, "health": 0.1, foodcategory: "Fruit" },
-    		"expandedfoods:lard" : { saturation: 16, "health": 0.1, foodcategory: "Protein" },
+			"expandedfoods:lard": { saturation: 10, "health":  0.05, foodcategory: "Protein"},
     		"game:honeyportion" : { saturation: 4, foodcategory: "Fruit" },
 			"game:salt": {saturation: 10, health: 0.5, foodcategory: "Grain"},
 		},
