@@ -60,7 +60,7 @@
       		"expandedfoods:wildfruitsyrupportion-seamango" : { saturation: 12, "health": -4, foodcategory: "Fruit" },
       		"expandedfoods:wildfruitsyrupportion-crowseye" : { saturation: 12, "health": -5, foodcategory: "Fruit" },
       		"expandedfoods:wildfruitsyrupportion-*" : { saturation: 12, "health": 0.1, foodcategory: "Fruit" },
-    		"expandedfoods:lard" : { saturation: 16, "health": 0.1, foodcategory: "Protein" },
+			"expandedfoods:lard": { saturation: 10, "health":  0.05, foodcategory: "Protein"},
     		"expandedfoods:fishsauce" : { saturation: 5, foodcategory: "Protein" },
     		"expandedfoods:soysauce" : { saturation: 6.4, "health": 0.1, foodcategory: "Protein" },
     		"game:honeyportion" : { saturation: 4, foodcategory: "Fruit" },
