@@ -12,7 +12,7 @@
     	"expandedNutritionPropsByType": {
 			"*-raw": {
 				"game:fat" : {saturation: 100, foodcategory: "Protein"},
-				"expandedfoods:lard" : {saturation: 8, "health":  0.05, foodcategory: "Protein"},
+				"expandedfoods:lard" : {saturation: 5, "health":  0.025, foodcategory: "Protein"},
 				"game:fruit-cranberry" : { saturation: 45, foodcategory: "Fruit" },
 				"game:fruit-saguaro" : { saturation: 45, "health": 0.3, foodcategory: "Fruit" },
 				"game:fruit-blueberry" : { saturation: 60, foodcategory: "Fruit" },
