@@ -18,7 +18,7 @@
 		},
 		expandedNutritionProps: {
       		"game:milkportion" : { saturation: 1.5, foodcategory: "Dairy" },
-			"expandedfoods:lard": { saturation: 16, "health":  0.1, foodcategory: "Protein"},
+			"expandedfoods:lard": { saturation: 10, "health":  0.05, foodcategory: "Protein"},
 			"expandedfoods:pasteurizedmilk": { saturation: 1.15, "health":  0.1, foodcategory: "Dairy"},
 			"expandedfoods:brothportion-bone": { saturation: 1, "health": 0.1, foodcategory: "Protein"},
 			"expandedfoods:brothportion-vegetable": { saturation: 1, "health": 0.1, foodcategory: "Vegetable"},
