@@ -21,7 +21,7 @@
     "expandedNutritionProps": {
         "expandedfoods:snakenugget-raw": {saturation: 150, foodcategory: "Protein"},
         "game:fat": {saturation: 200, foodcategory: "Protein"},
-		"expandedfoods:lard" : {saturation: 8, "health":  0.05, foodcategory: "Protein"},
+		"expandedfoods:lard": { saturation: 10, "health":  0.05, foodcategory: "Protein"},
         "game:cheese-cheddar-1slice" : { saturation: 240, foodcategory: "Dairy" },
         "game:cheese-blue-1slice" : {saturation: 200, foodcategory: "Dairy" },
     },
