@@ -3,8 +3,10 @@
 	classByType: { "*-butter": "ExpandedLiquid", "*-sauce": "ExpandedLiquid", "*-paste": "ItemLiquidPortion"},
 	matterState: "liquid",
 	variantgroups: [
-		{ code: "nut", states: ["almond"] },
-		{ code: "type", states: ["paste", "butter"] },
+		{ code: "nut", states: ["sunflower", "walnut",
+				"almond", "pinenut", "macadamia", "acorn", "chestnut", "hazelnut", "pumpkinseed", "cashew", "pistachio" ]
+		},
+		{ code: "type", states: ["butter", "sweetened"] },
 	],
 	attributes: {
 		handbook: {
@@ -24,7 +26,6 @@
 				}
 			},
 			nutritionPropsPerLitreByType: {
-				"*-paste":  {	saturation: 3200, foodcategory: "Protein" },
 				"*":  {	saturation: 0, foodcategory: "Protein" },
 			}
 		},
@@ -44,7 +45,7 @@
 	},
 	shape: { base: "game:item/liquid" },
 	texture: { base: "item/food/peanut/{type}" },
-	creativeinventoryStacks: [ { tabs: ["general", "liquids", "expandedfoods"], stacks: [ { type: "block", code: "game:woodbucket", attributes: { ucontents: [ { type:"item", code: "expandedfoods:peanutliquid-{type}", makefull: true } ] } } ] } ],
+	creativeinventoryStacks: [ { tabs: ["general", "liquids", "expandedfoods"], stacks: [ { type: "block", code: "game:woodbucket", attributes: { ucontents: [ { type:"item", code: "expandedfoods:nutliquid-{nut}-{type}", makefull: true } ] } } ] } ],
 	maxstacksize: 5000,
 	materialDensity: 200,
 	nutritionPropsByType: {
