@@ -1,0 +1,10 @@
+﻿[
+ {
+    "file": "expandedfoods:itemtypes/liquid/nutliquid.json",
+    op: "addeach", 
+    path: "/skipVariants/-",
+    value: [ "stuffedpepper-acorn-*"],
+    side: "server",
+    dependsOn: [{ "modid": "wildcraftfruit", "invert": true }]
+ },
+]
