@@ -20,7 +20,7 @@
 			smeltedStack: {
 				type: "item",
 				code: "expandedfoods:lard",
-				"quantity": 10
+				"quantity": 20
 			},
 			requiresContainer: false
 		},
