@@ -19,6 +19,7 @@ Added aspic
 Added dehydrated yeast?
 Added pigs in a blanket (dough + sausage)
 Added flatbread
+Added cheese bread
 Cut pasta can be combined with chopped food to make pasta dumplings; pasta dumplings can be used in place of pasta OR dumplings
 Standardized smashed meat variants?
 Healing over time added 
@@ -91,7 +92,7 @@ BALANCING:
 
 NEW FOOD:
 - added meatloaf?
-- added sunflower butter?
+- added walnut/sunflower butter?
 - Dehydrated yeast added (cook in cooking pot; grind result)
 
 BUG FIXES:
